// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Caption renders 1`] = `
<h3
  className="sc-iNFqmR kVJHPw"
>
  Heading
</h3>
`;

exports[`Caption renders colors 1`] = `
Array [
  <h3
    className="sc-iNFqmR kVJHPw"
  >
    Default color is Bulma
  </h3>,
  <h3
    className="sc-iNFqmR fWHnIh"
    color="piccolo.100"
  >
    Piccolo
  </h3>,
  <h3
    className="sc-iNFqmR izdcir"
    color="trunks.100"
  >
    Trunks
  </h3>,
  <h3
    className="sc-iNFqmR eTGvDp"
    color="krillin.100"
  >
    Krillin
  </h3>,
]
`;

exports[`Caption renders font-weight 1`] = `
Array [
  <h3
    className="sc-iNFqmR kVJHPw"
  >
    Default font-weight is bold
  </h3>,
  <h3
    className="sc-iNFqmR iRSkaB"
  >
    Font-weight is regular
  </h3>,
]
`;

exports[`Caption renders line height 1`] = `
Array [
  <h3
    className="sc-iNFqmR kVJHPw"
  >
    Line-height is pre-calculated
  </h3>,
  <h3
    className="sc-iNFqmR gLeKcN"
  >
    Custon line-height
  </h3>,
]
`;

exports[`Caption renders semantic tags 1`] = `
Array [
  <h3
    className="sc-iNFqmR kVJHPw"
  >
    H3 is a default tag
  </h3>,
  <h2
    className="sc-iNFqmR kVJHPw"
  >
    H2 tag
  </h2>,
  <h6
    className="sc-iNFqmR kVJHPw"
  >
    H6 tag
  </h6>,
]
`;

exports[`Caption renders sizes 1`] = `
Array [
  <h3
    className="sc-iNFqmR kVJHPw"
  >
    Default font-size is 16px
  </h3>,
  <h3
    className="sc-iNFqmR jPllyj"
    size={24}
  >
    Size is 24px
  </h3>,
  <h3
    className="sc-iNFqmR jrtybn"
    size={48}
  >
    Size is 48px
  </h3>,
]
`;

exports[`Caption renders text-align 1`] = `
Array [
  <h3
    className="sc-iNFqmR kVJHPw"
  >
    Text-align is not specified
  </h3>,
  <h3
    className="sc-iNFqmR QGpuT"
  >
    Centered Heading
  </h3>,
  <h3
    className="sc-iNFqmR dQrJYU"
  >
    Right alignment
  </h3>,
]
`;

exports[`Caption renders underline 1`] = `
Array [
  <h3
    className="sc-iNFqmR kVJHPw"
  >
    Default text-decoration is none
  </h3>,
  <h3
    className="sc-iNFqmR xTKKF"
  >
    Underline Heading
  </h3>,
]
`;

exports[`Caption renders uppercase 1`] = `
Array [
  <h3
    className="sc-iNFqmR kVJHPw"
  >
    Default text-transform is none
  </h3>,
  <h3
    className="sc-iNFqmR hAJtzn"
  >
    Uppercase Heading
  </h3>,
]
`;
